--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.1.1"
 djangorestframework = "^3.15.2"
 pillow = "^10.4.0"
 django-filter = "^24.3"
+python-decouple = "^3.8"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
