--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pillow = "^10.4.0"
 django-filter = "^24.3"
 python-decouple = "^3.8"
 psycopg2 = "^2.9.9"
+djangorestframework-simplejwt = "^5.3.1"
+requests = "^2.32.3"
 
 
 [build-system]
