--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 
 
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.6.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
