--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-decouple = "^3.8"
 psycopg2 = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
+drf-spectacular = "^0.27.2"
 
 
 [tool.poetry.group.dev.dependencies]
