--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2 = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 drf-spectacular = "^0.27.2"
+stripe = "^10.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
