feat: Реализована функция подписки с асинхронной рассылкой писем при обновлении курса
- Добавлена возможность подписки пользователей на уведомления об обновлениях курса
- Интегрирован Celery с Redis для асинхронной обработки задач
- Настроены параметры Django для работы с Celery и Redis
- Создана асинхронная задача для отправки email уведомлений подписчикам при обновлении курса
- Проведено тестирование функционала и исправлены проблемы с переменными окружения
- Обеспечена успешная работа задач через Celery worker и Redis

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,18 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=localhost
 DB_PORT=5432
+
+STRIPE_SECRET_KEY=
+
+# Настройки для отправки email через SMTP
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com  # SMTP сервер провайдера
+EMAIL_PORT=587  # или 465, в зависимости от провайдера
+EMAIL_USE_TLS=True  # или False, если используется SSL
+EMAIL_USE_SSL=False  # или True, если используется SSL
+EMAIL_HOST_USER=email@email.com  # email
+EMAIL_HOST_PASSWORD=''  # Пароль от email
+DEFAULT_FROM_EMAIL=email@email.com  # Email, который будет указан как отправитель
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
