--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 drf-spectacular = "^0.27.2"
 stripe = "^10.12.0"
+celery = {extras = ["redis"], version = "^5.4.0"}
+redis = "^5.1.1"
+django-celery-beat = "^2.7.0"
+python-dotenv = "^1.0.1"
+kombu = "^5.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
