feat: обновлен .env.example файл

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 SECRET_KEY=
 
 # PostgreSQL конфигурация
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=localhost
-DB_PORT=5432
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 STRIPE_SECRET_KEY=
 
