--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+#Ваш ключ
 SECRET_KEY=
 
 # PostgreSQL конфигурация
@@ -7,6 +8,7 @@ POSTGRES_PASSWORD=
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
+# Stripe настройка
 STRIPE_SECRET_KEY=
 
 # Настройки для отправки email через SMTP
@@ -19,5 +21,6 @@ EMAIL_HOST_USER=email@email.com  # email
 EMAIL_HOST_PASSWORD=''  # Пароль от email
 DEFAULT_FROM_EMAIL=email@email.com  # Email, который будет указан как отправитель
 
+# Celery настройки
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
