--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ kombu = "^5.4.2"
 flake8 = "^7.1.1"
 autopep8 = "^2.3.1"
 django-nested-admin = "^4.1.1"
+pytest = "^8.3.3"
+pytest-django = "^4.9.0"
+stripe = "^11.2.0"
+pytest-cov = "^6.0.0"
+pillow = "^11.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
