--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.9"
+#version: "3.9"
 
 services:
   redis:
@@ -34,6 +34,16 @@ services:
         condition: service_healthy
     env_file:
       - .env  # Используем .env для приложения
+
+  tests:
+    build: .
+    command: sh -c "pytest --cov=."
+    env_file:
+      - .env
+    depends_on:
+      - database
+      - redis
+
 
   celery:
     build: .
