--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest-django = "^4.9.0"
 stripe = "^11.2.0"
 pytest-cov = "^6.0.0"
 pillow = "^11.0.0"
+django-cors-headers = "^4.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
