--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ stripe = "^11.2.0"
 pytest-cov = "^6.0.0"
 pillow = "^11.0.0"
 django-cors-headers = "^4.6.0"
+matplotlib = "^3.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
